[package]
name = "hrtime"
authors = ["Marcelo Hernandez <marcelohdez.inq@gmail.com>"]
license = "MIT"
version = "0.2.0"
edition = "2021"

description = """
A thin library which converts seconds into either a colon-seperated time
string and vice versa, or into the raw hour, minute, and second values.
"""
repository = "https://github.com/marcelohdez/hrtime"
homepage = "https://crates.io/crates/hrtime"
readme = "README.md"
keywords = ["time", "human-readable", "readable"]

[dependencies]
